<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity"
    android:gravity="center">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:background="@color/backgroundcolor"
        android:orientation="horizontal"
        android:gravity="center"
        android:clipToPadding="false"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        >
        <android.support.v7.widget.CardView android:layout_height="180dp"
            android:layout_width="150dp"
            android:layout_margin="10dp"
            android:foreground="?android:attr/selectableItemBackground"
            android:clickable="true">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:gravity="center">

                <ImageView
                    android:id="@+id/imagenVehiculo"
                    android:layout_width="64dp"
                    android:layout_height="64dp"
                    android:background="@drawable/cerclebackgroundgreen"
                    android:src="@drawable/ic_directions_car_black_24dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:layout_marginTop="10dp"
                    android:textAlignment="center"
                    android:id="@+id/ingresarDatosVehiculo"
                    android:text="@string/StringIcono1"/>

                <View android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/lightgray"
                    android:layout_margin="10dp"></View>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:textAlignment="center"
                    android:id="@+id/mecanicaDelVehiculo"
                    android:text="@string/StringIconoSub1"/>
            </LinearLayout>
        </android.support.v7.widget.CardView>
        <android.support.v7.widget.CardView android:layout_height="180dp"
            android:layout_width="150dp"
            android:layout_margin="10dp"
            android:foreground="?android:attr/selectableItemBackground"
            android:clickable="true">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:gravity="center">

                <ImageView
                    android:id="@+id/imagenMantenimiento"
                    android:layout_width="64dp"
                    android:layout_height="64dp"
                    android:background="@drawable/cerclebackgroundyellow"
                    android:src="@drawable/ic_directions_black_24dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:layout_marginTop="10dp"
                    android:textAlignment="center"
                    android:id="@+id/proximosMantenimientos"
                    android:text="@string/StringIcono2"/>

                <View android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/lightgray"
                    android:layout_margin="10dp"></View>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:textAlignment="center"
                    android:id="@+id/historial"
                    android:text="@string/StringIconoSub2"/>
            </LinearLayout>
        </android.support.v7.widget.CardView>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/backgroundcolor"
        android:orientation="horizontal"
        android:gravity="center"
        android:clipToPadding="false"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        >
        <android.support.v7.widget.CardView android:layout_height="180dp"
            android:layout_width="150dp"
            android:layout_margin="10dp"
            android:foreground="?android:attr/selectableItemBackground"
            android:clickable="true">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:gravity="center">

                <ImageView
                    android:id="@+id/imagenEstadisticas"
                    android:layout_width="64dp"
                    android:layout_height="64dp"
                    android:background="@drawable/cerclebackgroundpurple"
                    android:src="@drawable/ic_monetization_on_black_24dp" />

                <TextView
                    android:id="@+id/estadisticas"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/StringIcono3"
                    android:textAlignment="center"
                    android:textStyle="bold" />

                <View android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/lightgray"
                    android:layout_margin="10dp"></View>

                <TextView
                    android:id="@+id/reportes"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/StringIconoSub3"
                    android:textAlignment="center" />
            </LinearLayout>
        </android.support.v7.widget.CardView>
        <android.support.v7.widget.CardView android:layout_height="180dp"
            android:layout_width="150dp"
            android:layout_margin="10dp"
            android:foreground="?android:attr/selectableItemBackground"
            android:clickable="true">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:gravity="center">

                <ImageView
                    android:id="@+id/imagenAlertas"
                    android:layout_width="64dp"
                    android:layout_height="64dp"
                    android:background="@drawable/cerclebackgroundred"
                    android:src="@drawable/ic_directions_black_24dp" />

                <TextView
                    android:id="@+id/alertas"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/StringIcono4"
                    android:textAlignment="center"
                    android:textStyle="bold" />

                <View android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/lightgray"
                    android:layout_margin="10dp"></View>

                <TextView
                    android:id="@+id/emergencias"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/StringIconoSub4"
                    android:textAlignment="center" />
            </LinearLayout>
        </android.support.v7.widget.CardView>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="-10dp"
        android:background="@color/backgroundcolor"
        android:orientation="horizontal"
        android:gravity="center"
        android:clipToPadding="false"
        >
        <android.support.v7.widget.CardView android:layout_height="75dp"
            android:layout_width="150dp"
            android:layout_margin="8dp"
            android:foreground="?android:attr/selectableItemBackground"
            android:clickable="true">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:gravity="center">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:layout_marginTop="10dp"
                    android:textAlignment="center"
                    android:text="Cerrar Sesión"/>

                <View android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/lightgray"
                    android:layout_margin="10dp"></View>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    android:text="¡Recomiéndanos!"/>
            </LinearLayout>
        </android.support.v7.widget.CardView>
    </LinearLayout>

</LinearLayout>